# agent-computer-use

./: .editorconfig  .gitignore  .mise.toml  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  package.json  pnpm-lock.yaml
.changeset/: README.md  config.json  loud-yaks-play.md  pink-koi-dig.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_backend.yml
.github/workflows/: bench.yml  ci.yml  release.yml
.husky/: pre-commit
cli/: Cargo.toml
cli/benches/: benchmarks.rs
cli/crates/agent-click-cdp/: Cargo.toml
cli/crates/agent-click-cdp/src/: connection.rs  detect.rs  dom.rs  lib.rs  protocol.rs
cli/crates/agent-click-core/: Cargo.toml
cli/crates/agent-click-core/benches/: core_benchmarks.rs
cli/crates/agent-click-core/src/: action.rs  element.rs  error.rs  lib.rs  node.rs
cli/crates/agent-click-linux/: Cargo.toml
cli/crates/agent-click-linux/src/: lib.rs  platform.rs
cli/crates/agent-click-macos/: Cargo.toml
cli/crates/agent-click-macos/src/: ax.rs  input.rs  lib.rs  platform.rs
cli/crates/agent-click-mcp/: Cargo.toml
cli/crates/agent-click-windows/: Cargo.toml
cli/crates/agent-click-windows/src/: input.rs  lib.rs  platform.rs  uia.rs
cli/crates/agent-computer-use-cdp/: Cargo.toml
cli/crates/agent-computer-use-cdp/src/: connection.rs  detect.rs  dom.rs  lib.rs
cli/crates/agent-computer-use-core/: Cargo.toml
cli/crates/agent-computer-use-core/benches/: core_benchmarks.rs
cli/crates/agent-computer-use-core/src/: platform.rs  selector.rs
cli/crates/agent-computer-use-linux/: Cargo.toml
cli/crates/agent-computer-use-linux/src/: atspi.rs  input.rs  lib.rs  platform.rs
cli/crates/agent-computer-use-macos/: Cargo.toml
cli/crates/agent-computer-use-macos/src/: ax.rs  input.rs  lib.rs  platform.rs
cli/crates/agent-computer-use-mcp/: Cargo.toml
cli/crates/agent-computer-use-windows/: Cargo.toml
cli/crates/agent-computer-use-windows/src/: input.rs  platform.rs  uia.rs
cli/examples/: calculator.yaml  complex-calc.yaml  fill-safari-form.yaml  music-search.yaml  notes-create.yaml  search-maps.yaml
cli/src/: actions.rs  batch.rs  main.rs  observe.rs  record.rs  selector_dsl.rs  setup.rs  snapshot.rs  wait.rs  workflow.rs
cli/src/cli/: args.rs  handlers.rs  mod.rs  output.rs
docker/: Dockerfile.build  docker-compose.yml
docs/: next.config.ts  package-lock.json  package.json
docs/scripts/: build-search-index.mjs
docs/src/: mdx-components.tsx
docs/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
docs/src/app/ai-mode/: page.mdx
docs/src/app/background/: page.mdx
docs/src/app/batch/: page.mdx
docs/src/app/changelog/: page.tsx
docs/src/app/commands/: page.mdx
docs/src/app/commands/click/: page.mdx
docs/src/app/commands/snapshot/: page.mdx
docs/src/app/commands/type/: page.mdx
docs/src/app/fonts/: roobert-mono.ts  roobert.ts
docs/src/app/installation/: page.mdx
docs/src/app/options/: page.mdx
docs/src/app/quickstart/: layout.tsx  page.mdx
docs/src/app/selectors/: page.mdx
docs/src/app/skills/: layout.tsx  page.mdx
docs/src/app/snapshots/: page.mdx
docs/src/app/workflows/: page.mdx
docs/src/components/: code-block.tsx  copy-page.tsx  docs-layout.tsx  docs.tsx  fade-in.tsx  footer.tsx  install-tabs.tsx  mobile-sidebar.tsx  nav.tsx  page-nav.tsx  search.tsx  sidebar.tsx  theme-toggle.tsx  toc.tsx
docs/src/components/ui/: command.tsx
docs/src/lib/: view-transition.ts
scripts/: bench.sh  build-all.sh  bundle-npm.sh  changeset.mjs  release.mjs  setup.sh  sync-cargo-version.sh
skills/agent-computer-use/: SKILL.md
