[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/kortix-ai/agent-click"
homepage = "https://github.com/kortix-ai/agent-click"
description = "Computer use CLI for AI agents — control any app via the accessibility tree"
keywords = ["accessibility", "automation", "cli", "desktop", "ai-agent"]
categories = ["command-line-utilities", "accessibility", "os"]

[workspace.dependencies]
agent-click-core = { path = "crates/agent-click-core" }
agent-click-macos = { path = "crates/agent-click-macos" }
agent-click-windows = { path = "crates/agent-click-windows" }
agent-click-linux = { path = "crates/agent-click-linux" }
agent-click-mcp = { path = "crates/agent-click-mcp" }
agent-click-cdp = { path = "crates/agent-click-cdp" }

# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[package]
name = "agent-click"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "agent-click"
path = "src/main.rs"

[dependencies]
agent-click-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true }
agent-click-cdp = { workspace = true }
serde_yaml = "0.9"
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(target_os = "macos")'.dependencies]
agent-click-macos = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
agent-click-linux = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
agent-click-windows = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
