[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/kortix-ai/agent-computer-use"
homepage = "https://github.com/kortix-ai/agent-computer-use"
description = "Computer use CLI for AI agents — control any app via the accessibility tree"
keywords = ["accessibility", "automation", "cli", "desktop", "ai-agent"]
categories = ["command-line-utilities", "accessibility", "os"]

[workspace.dependencies]
agent-computer-use-core = { path = "crates/agent-computer-use-core" }
agent-computer-use-macos = { path = "crates/agent-computer-use-macos" }
agent-computer-use-windows = { path = "crates/agent-computer-use-windows" }
agent-computer-use-linux = { path = "crates/agent-computer-use-linux" }
agent-computer-use-mcp = { path = "crates/agent-computer-use-mcp" }
agent-computer-use-cdp = { path = "crates/agent-computer-use-cdp" }

# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[package]
name = "agent-computer-use"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "agent-cu"
path = "src/main.rs"

[dependencies]
agent-computer-use-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true }
agent-computer-use-cdp = { workspace = true }
serde_yaml = "0.9"
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(target_os = "macos")'.dependencies]
agent-computer-use-macos = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
agent-computer-use-linux = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
agent-computer-use-windows = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
