[package]
name = "agent-computer-use-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux backend for agent-computer-use — uses AT-SPI2 via D-Bus"

[dependencies]
agent-computer-use-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { workspace = true }
