[package]
name = "agent-computer-use-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS backend for agent-computer-use — uses AXUIElement accessibility APIs"

[dependencies]
agent-computer-use-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
core-foundation = "0.10"
core-graphics = "0.24"
foreign-types = "0.5"
