[package]
name = "agent-computer-use-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for agent-computer-use — exposes computer control as AI agent tools"

[dependencies]
agent-computer-use-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
